@@ -1,13 +1,15 @@
 <div class="align-center grid-block">
 	<div class="medium-4 grid-content">
 		<br><h3>Change Password</h3><br>
-		<p ng-if="authVm.firstLogin">Please change your password.</p>
-		<form ng-submit="authVm.changePassword()">
-			<label for="newPassword">New Password</label>
-			<input type="password" ng-model="authVm.newPassword" name="newPassword">
-			<label for="confirmPassword">Confirm New Password</label>
-			<input type="password" ng-model="authVm.confirmPassword" name="confirmPassword">
-			<input type="submit" class="button" value="Update">
-		</form>
+		<div ng-if="authVm.changePasswordResponse == -1">
+			<form ng-submit="authVm.changePassword()">
+				<label for="currentPassword">Current Password</label>
+				<input type="password" ng-model="authVm.currentPassword" name="currentPassword">
+				<div ng-include="'/app/auth/new_password.html'"></div>
+			</form>
+		</div>
+		<p ng-if="authVm.changePasswordResponse == 0">Your password has been successfully updated.</p>
+        <p ng-if="authVm.changePasswordResponse == 1">An error occured on the server. Please try again later.</p>
+        <!-- <a ng-if="!authVm.firstLogin" ui-sref="dashboard">Back to Dashboard</a> -->
 	</div>
 </div>
