@@ -1,6 +1,7 @@
 <div class="align-center grid-block">
     <div class="medium-4 grid-content">
         <br><h3>Reset Password</h3><br>
+        <p ng-if="authVm.firstLogin">Please change your password.</p>
         <div ng-if="authVm.changePasswordResponse == -1">
             <form ng-submit="authVm.resetPassword()">
                 <div ng-include="'/app/auth/new_password.html'"></div>
